--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-ledger-consensus-continuity-stats-monitor",
-  "version": "0.0.1-0",
+  "version": "1.0.0",
   "description": "Bedrock ledger consensus Continuity stats monitor",
   "main": "lib",
   "scripts": {
