--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bedrock-ledger-consensus-continuity-stats-monitor",
   "version": "1.0.1-0",
   "description": "Bedrock ledger consensus Continuity stats monitor",
+  "license": "SEE LICENSE IN LICENSE.md",
   "main": "lib",
   "scripts": {
     "lint": "eslint lib"
@@ -20,14 +21,13 @@
   },
   "homepage": "https://github.com/digitalbazaar/bedrock-ledger-consensus-continuity-stats-monitor",
   "dependencies": {
-    "lodash": "^4.17.11",
-    "systeminformation": "^4.0.14"
+    "lodash": "^4.17.11"
   },
   "peerDependencies": {
-    "bedrock": "^1.15.0",
-    "bedrock-ledger-consensus-continuity": "^3.2.1",
+    "bedrock": "1.18.1 - 3.x",
+    "bedrock-ledger-consensus-continuity": "3.2.1 - 4.x",
     "bedrock-ledger-consensus-continuity-storage": "^2.3.0",
-    "bedrock-ledger-node": "^8.0.0",
+    "bedrock-ledger-node": "^9.0.0",
     "bedrock-redis": "^3.4.0",
     "bedrock-stats": "^1.0.0"
   },
@@ -35,7 +35,7 @@
     "node": ">=8.9.0"
   },
   "devDependencies": {
-    "eslint": "^5.13.0",
+    "eslint": "^6.0.0",
     "eslint-config-digitalbazaar": "^2.0.0"
   }
 }
