--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "lib",
   "scripts": {
-    "lint": "eslint lib"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "node": ">=8.9.0"
   },
   "devDependencies": {
-    "eslint": "^6.0.0",
+    "eslint": "^7.10.0",
     "eslint-config-digitalbazaar": "^2.0.0"
   }
 }
