--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bedrock-ledger-consensus-continuity-stats-monitor",
-  "version": "1.1.1-0",
+  "version": "1.1.1",
   "description": "Bedrock ledger consensus Continuity stats monitor",
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "lib",
